[package]
name = "hello-actix"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
num_cpus = "1.16.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.108"
